[build-system]
requires = [ "scikit-build-core>=0.11", "pybind11>=3.0" ]
build-backend = "scikit_build_core.build"

[project]

name = "stlrom"
version = "0.2.2"
authors = [
    {name = "Alexandre Donzé", email = "alexandre.donze@univ-grenoble-alpes.fr"},
]
description = "Project with C++ and CMake dependencies."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cpp", "cmake", "extension"]
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.scikit-build]
minimum-version = "build-system.requires"

[tool.cibuildwheel]
build-frontend = "build[uv]"
enable = ["pypy"]